<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginOrRegister">

    <Button
        android:id="@+id/goToLoginButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/login_button_text"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/goToRegisterButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/register_button_text"

        android:layout_marginTop="5dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goToLoginButton" />

    <Button
        android:id="@+id/goToResetPasswordButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/reset_password_button_text"

        android:layout_marginTop="5dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goToRegisterButton" />

</androidx.constraintlayout.widget.ConstraintLayout>