<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="#D7D9D8"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/register_circle"

        app:layout_constraintTop_toBottomOf="@id/register_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/submitRegister" />

    <TextView
        android:id="@+id/register_text"

        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_marginTop="120dp"
        android:fontFamily="@font/overpass_light"
        android:text="@string/text_on_register_screen"

        android:textColor="#000"

        android:textAlignment="center"
        android:textSize="24dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/registerEmailField"

        android:layout_width="230dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_edit_text"

        android:hint="@string/email_hint"
        android:fontFamily="@font/overpass_light"
        android:textAlignment="center"
        android:textSize="10dp"
        android:textStyle="bold"

        android:layout_marginTop="70dp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text" />

    <EditText
        android:id="@+id/registerPasswordField"

        android:inputType="textPassword"

        android:layout_width="230dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_edit_text"

        android:hint="@string/password_hint"
        android:fontFamily="@font/overpass_light"
        android:textAlignment="center"
        android:textSize="10dp"
        android:textStyle="bold"

        android:layout_marginTop="25dp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerEmailField" />

    <Button
        android:id="@+id/submitRegister"

        android:layout_width="215dp"
        android:layout_height="45dp"

        android:layout_marginTop="50dp"

        android:backgroundTint="#2B73E0"

        android:fontFamily="@font/overpass_light"
        android:text="@string/register_button_text"
        android:textAlignment="center"
        android:textSize="15dp"

        app:cornerRadius="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerPasswordField" />

</androidx.constraintlayout.widget.ConstraintLayout>