<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7D9D8"

    tools:context=".CreateArticle">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/add_article_cricle_2"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/add_article_cricle_1"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/articleToolBar"

        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:background="#E0A42B"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/arBackToMainButton"

        android:layout_width="50dp"
        android:layout_height="50dp"

        android:background="#00FFFFFF"

        android:src="@drawable/arrow_back"

        app:layout_constraintBottom_toBottomOf="@id/articleToolBar"
        app:layout_constraintLeft_toLeftOf="@id/articleToolBar"
        app:layout_constraintTop_toTopOf="@id/articleToolBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="5dp"

        android:fontFamily="@font/marmelad"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFF"

        android:textSize="30dp"

        app:layout_constraintBottom_toBottomOf="@id/articleToolBar"
        app:layout_constraintLeft_toLeftOf="@id/articleToolBar"
        app:layout_constraintRight_toRightOf="@id/articleToolBar"
        app:layout_constraintTop_toTopOf="@id/articleToolBar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/addArticleCard"

        android:layout_width="325dp"
        android:layout_height="540dp"

        app:cardCornerRadius="9dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/articleToolBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:orientation="vertical"

            android:paddingLeft="20dp"

            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/ImageView"
                android:layout_width="175dp"

                android:layout_height="175dp"

                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:scaleType="center" />

            <EditText
                android:id="@+id/addShortDescription"

                android:layout_width="230dp"

                android:layout_height="130dp"
                android:layout_gravity="center"

                android:layout_marginTop="10dp"

                android:background="@drawable/rounded_edit_add_text"
                android:fontFamily="@font/overpass_light"
                android:hint="@string/short_description_hint"
                android:textAlignment="center"
                android:textSize="12dp"

                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/expandMapButton"

                android:layout_width="215dp"

                android:layout_height="45dp"
                android:layout_gravity="center"

                android:layout_marginTop="10dp"
                android:backgroundTint="#2B73E0"
                android:fontFamily="@font/overpass_light"

                android:text="@string/expand_map_button_text"
                android:textAlignment="center"
                android:textSize="12dp"
                app:cornerRadius="8dp"

                app:icon="@drawable/mapicon"
                app:iconGravity="end" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/chooseImageFileButton"

                android:layout_width="215dp"

                android:layout_height="45dp"
                android:layout_gravity="center"

                android:layout_marginTop="10dp"

                android:backgroundTint="#2B73E0"

                android:fontFamily="@font/overpass_light"
                android:text="@string/chose_image_button_text"
                android:textAlignment="center"
                android:textSize="12dp"

                app:cornerRadius="8dp"
                app:icon="@drawable/add_photo"

                app:iconGravity="end" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitArticleButton"

                android:layout_width="215dp"

                android:layout_height="45dp"
                android:layout_gravity="center"

                android:layout_marginTop="10dp"

                android:backgroundTint="#2B73E0"

                android:fontFamily="@font/overpass_light"
                android:text="@string/submit_article_button_text"
                android:textAlignment="center"
                android:textSize="12dp"

                app:cornerRadius="8dp"
                app:icon="@drawable/doneicon"

                app:iconGravity="end" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <!--&lt;!&ndash;     &#45;&#45;!>-->


    <!--    <com.google.android.material.button.MaterialButton


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"



            android:text="@string/chose_image_button_text"

            app:layout_constraintTop_toBottomOf="@id/addShortDescription"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
    &lt;!&ndash;
        <Button
            android:id="@+id/chooseImageFileButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"

            android:text="@string/chose_image_button_text"

            app:layout_constraintTop_toBottomOf="@id/addShortDescription"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />&ndash;&gt;

        <Button


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"

            android:text="@string/submit_article_button"

            app:layout_constraintTop_toBottomOf="@id/chooseImageFileButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>